# SO1_Diciembre_202302220

./: .gitignore  README.md
proyecto-1/bash/: generator.sh  readme.md  setup_all.sh
proyecto-1/bash/docker-files/: dockerfile.cpu
proyecto-1/dashboard/: consultas.md  docker-compose.yml
proyecto-1/docker-files/: dockerfile.low  dockerfile.ram  readme.md
proyecto-1/documentacion/: manual_tecnico.md  manual_usuario.md
proyecto-1/go-daemon/: go.mod  main.go  readme.md
proyecto-1/modulo-kernel/: Makefile  continfo.c  continfo.ko  module.c  procesos.c  ram.c  readme.md  sysinfo.c  sysinfo.ko
proyecto-2/api-rust/: Cargo.toml  Dockerfile  README-DOCKER.md  build.rs  readme.md
proyecto-2/api-rust/src/: main.rs
proyecto-2/create-valkey-image/: Dockerfile
proyecto-2/docs/: manual-tecnico.md
proyecto-2/go-http-client/: Dockerfile  main.go
proyecto-2/go-http-client/pb/proto/: ventas.pb.go
proyecto-2/grafana/: grafana.md  grafico_ventas.json
proyecto-2/grpc-server-go/: Dockerfile  go.mod  go.sum  main.go  readme.md
proyecto-2/grpc-server-go/pb/proto/: ventas_grpc.pb.go
proyecto-2/k8s/: README.md  apps.yaml  consumer.yaml  go-client.yaml  grafana.yaml  hpa.yaml  ingress.yaml  kafka-topic.yaml  kafka.yaml  strimzi-kafka.yaml  valkey-vm.yaml
proyecto-2/kafka-consumer-go/: Dockerfile  main.go
proyecto-2/locust/: locustfile.py
proyecto-2/proto/: readme.md  ventas.proto
proyecto-2/vm/: confi_vm.md
