[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server (Para recibir JSON)
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC Client (Para hablar con Go)
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
# Compilador de proto automático
tonic-build = "0.9"
